# fortuno-mpi

./: .gitignore  CMakeLists.txt  README.rst  fpm.toml  meson.build
.github/workflows/: ci.yml
cmake/: FortunoMpiConfig.cmake.in  FortunoMpiHelpers.cmake
example/: CMakeLists.txt  meson.build  simple_tests.f90  testapp.f90
src/: CMakeLists.txt  fortuno_mpi.f90  meson.build
src/fortuno/: CMakeLists.txt  meson.build
src/fortuno/mpi/: CMakeLists.txt  mpiconlogger.f90  mpidriver.f90
src/fortuno_mpi/: CMakeLists.txt  meson.build  mpibasetypes.f90  mpicase.f90  mpicmdapp.f90  mpiconlogger.f90  mpicontext.f90  mpidriver.f90  mpiglobalctx.f90  mpisuite.f90  mpitestinfo.f90
subprojects/: fortuno.cmake  fortuno.wrap
test/export/: CMakeLists.txt  fpm.toml  meson.build
test/export/app/: CMakeLists.txt  testapp.f90
